--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -241,6 +241,21 @@ TABLE OF CONTENTS:
   content: "";
 }
 
+.buddyboss_page_bp-tools .section-default_data ul li.main {
+  border-bottom: 1px solid #EEEEEE;
+  margin: 0 0 10px;
+  padding: 5px 0;
+}
+
+.buddyboss_page_bp-tools .section-default_data ul li.main ul {
+  margin: 5px 0 0 20px;
+}
+
+.buddyboss_page_bp-tools .section-default_data #message ul.results li {
+  list-style: disc;
+  margin-left: 25px;
+}
+
 /*
  * 2.4 Tooltips
  */
