Medium editor and UI fixes

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -928,7 +928,7 @@ body.post-type-bp-email .categorydiv label {
   margin: 0 10px 2%;
   background-color: #fff;
   border: 1px solid #e5e5e5;
-  border-radius: 5px;
+  border-radius: 6px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   box-sizing: border-box;
   flex: 0 0 calc(33.33% - 20px);
@@ -1086,7 +1086,8 @@ body.post-type-bp-email .categorydiv label {
   list-style-type: none;
 }
 
-.bp-help-content .article-child .actions, .bp-help-content .article-child .sub-menu-count {
+.bp-help-content .article-child .actions,
+.bp-help-content .article-child .sub-menu-count {
   display: none;
 }
 
