--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -1027,6 +1027,10 @@ body.post-type-bp-email .categorydiv label {
   display: inline;
 }
 
+.bp-help-content ul.bp-help-menu li.miscellaneous {
+  display: none !important;
+}
+
 .bp-help-content ul.bp-help-menu li:not(:last-child):after {
   font-family: dashicons;
   content: "\f345";
@@ -1039,10 +1043,6 @@ body.post-type-bp-email .categorydiv label {
 
 .bp-help-content ul.bp-help-menu li:last-child a {
   color: #999;
-}
-
-.bp-help-content li.miscellaneous {
-  display: none;
 }
 
 .bp-help-content h1 {
@@ -1080,6 +1080,15 @@ body.post-type-bp-email .categorydiv label {
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 3px 20px -1px rgba(7, 10, 25, 0.1);
+}
+
+.bp-help-content .article-child > ul > li {
+  list-style-type: none;
+}
+
+.bp-help-content .article-child .actions,
+.bp-help-content .article-child .sub-menu-count {
+  display: none;
 }
 
 @media screen and (min-width: 782px) {
