--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1115,12 +1115,14 @@ body.post-type-bp-email .categorydiv label {
 		box-shadow: 0 3px 20px -1px rgba(7, 10, 25, 0.1);
 	}
 
-	.article-child  {
-		> ul > li{
+	.article-child {
+
+		> ul > li {
 			list-style-type: none;
 		}
 
-		.actions, .sub-menu-count {
+		.actions,
+		.sub-menu-count {
 			display: none;
 		}
 	}
