--- a/src/bp-core/css/admin-bar.css
+++ b/src/bp-core/css/admin-bar.css
@@ -83,6 +83,7 @@ li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bbp-c
 li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bbp-reset"],
 li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bp-credits"],
 li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bp-member-type-import"],
+li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bp-media-import"],
 li.toplevel_page_buddyboss-platform .wp-submenu li a[href^="admin.php?page=bp-repair-community"] {
 	display: none !important;
 }
