default data - admin UI

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -257,7 +257,7 @@ TABLE OF CONTENTS:
 		}
 
 		ul li.main ul {
-			margin: 5px 0 0 20px;
+			margin: 5px 0 0 25px;
 		}
 
 		#message ul.results li {
@@ -910,21 +910,25 @@ body.post-type-bp-email .categorydiv label {
 /*------------------------------------------------------------------------------
  * 5.0 Tools
  *----------------------------------------------------------------------------*/
+.buddyboss_page_bp-tools .wrap,
 .buddyboss_page_bp-repair-community .wrap,
 .buddyboss_page_bbp-repair .wrap {
 	max-width: 950px;
 }
 
+.buddyboss_page_bp-tools p,
 .buddyboss_page_bp-repair-community p,
 .buddyboss_page_bbp-repair p {
 	line-height: 2;
 }
 
+.buddyboss_page_bp-tools fieldset,
 .buddyboss_page_bp-repair-community fieldset,
 .buddyboss_page_bbp-repair fieldset {
 	margin: 2em 0 0;
 }
 
+.buddyboss_page_bp-tools legend,
 .buddyboss_page_bp-repair-community legend,
 .buddyboss_page_bbp-repair legend {
 	color: #23282d;
@@ -933,6 +937,7 @@ body.post-type-bp-email .categorydiv label {
 	margin: 1em 0;
 }
 
+.buddyboss_page_bp-tools label,
 .buddyboss_page_bp-repair-community label,
 .buddyboss_page_bbp-repair label {
 	clear: left;
