--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -248,7 +248,7 @@ TABLE OF CONTENTS:
 }
 
 .buddyboss_page_bp-tools .section-default_data ul li.main ul {
-  margin: 5px 0 0 20px;
+  margin: 5px 0 0 25px;
 }
 
 .buddyboss_page_bp-tools .section-default_data #message ul.results li {
@@ -879,21 +879,25 @@ body.post-type-bp-email .categorydiv label {
 /*------------------------------------------------------------------------------
  * 5.0 Tools
  *----------------------------------------------------------------------------*/
+.buddyboss_page_bp-tools .wrap,
 .buddyboss_page_bp-repair-community .wrap,
 .buddyboss_page_bbp-repair .wrap {
   max-width: 950px;
 }
 
+.buddyboss_page_bp-tools p,
 .buddyboss_page_bp-repair-community p,
 .buddyboss_page_bbp-repair p {
   line-height: 2;
 }
 
+.buddyboss_page_bp-tools fieldset,
 .buddyboss_page_bp-repair-community fieldset,
 .buddyboss_page_bbp-repair fieldset {
   margin: 2em 0 0;
 }
 
+.buddyboss_page_bp-tools legend,
 .buddyboss_page_bp-repair-community legend,
 .buddyboss_page_bbp-repair legend {
   color: #23282d;
@@ -902,6 +906,7 @@ body.post-type-bp-email .categorydiv label {
   margin: 1em 0;
 }
 
+.buddyboss_page_bp-tools label,
 .buddyboss_page_bp-repair-community label,
 .buddyboss_page_bbp-repair label {
   clear: left;
@@ -911,16 +916,20 @@ body.post-type-bp-email .categorydiv label {
 }
 
 @media screen and (max-width: 782px) {
+
+  .buddyboss_page_bp-tools p,
   .buddyboss_page_bp-repair-community p,
   .buddyboss_page_bbp-repair p {
     line-height: 1.5;
   }
+
   .buddyboss_page_bp-repair-community label,
   .buddyboss_page_bbp-repair label {
     margin-bottom: 1em;
     padding-right: 25px;
     text-indent: -33px;
   }
+
   .buddyboss_page_bp-repair-community .checkbox,
   .buddyboss_page_bbp-repair .checkbox {
     padding: 0 0 0 30px;
