--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -9684,6 +9684,7 @@ body.login .login-popup .mfp-close:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 20px;
 }
 
 .bb-photos-meta {
@@ -9840,7 +9841,8 @@ body.login .login-popup .mfp-close:hover {
   padding: 0;
 }
 
-#buddypress .bb-media-model-container .activity-list .activity-item {
+#buddypress .bb-media-model-container .activity-list .activity-item,
+#bbpress-forums .bb-media-model-container .activity-list .activity-item {
   border: 0;
   box-shadow: none;
   margin: 0;
@@ -10438,7 +10440,8 @@ ul.bb-albums-list .bb-more-photos strong {
   margin-left: 15px;
 }
 
-#buddypress ul.bp-list.loading {
+#buddypress ul.bp-list.loading,
+#bbpress-forums ul.bp-list.loading {
   background: #fff;
   padding: 20px;
   text-align: center;
