--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1129,14 +1129,17 @@ body.post-type-bp-email .categorydiv label {
 	h1 {
 		font-weight: 500;
 		font-size: 2em;
+		margin-bottom: 1em;
 	}
 
 	h2 {
 		font-size: 1.5em;
+		margin-bottom: 1em;
 	}
 
 	h3 {
 		font-size: 1.2em;
+		margin-bottom: 1em;
 	}
 
 	code {
