hello appboss video fix

--- a/src/bp-core/admin/css/hello.css
+++ b/src/bp-core/admin/css/hello.css
@@ -64,7 +64,7 @@ TABLE OF CONTENTS:
 .bp-hello-content .video-wrapper .video-container {
   position: relative;
   padding-bottom: 56.25%;
-  padding-top: 30px;
+  padding-top: 0;
   height: 0;
   overflow: hidden;
 }
