--- a/src/bp-core/admin/sass/hello.scss
+++ b/src/bp-core/admin/sass/hello.scss
@@ -73,7 +73,7 @@ TABLE OF CONTENTS:
 	.video-wrapper .video-container {
 		position: relative;
 		padding-bottom: 56.25%;
-		padding-top: 30px;
+		padding-top: 0;
 		height: 0;
 		overflow: hidden;
 	}
