messages - select duplicate recipient

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -475,6 +475,10 @@ input#send-to-input {
 
 .messages .select2-dropdown {
 	border-color: $med-light-grey;
+
+	.select2-results__option[aria-selected=true] {
+		display: none;
+	}
 }
 
 .messages-wrapper #subnav .subnav {
