--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3924,6 +3924,10 @@ input#send-to-input {
   border-color: #d6d6d6;
 }
 
+.messages .select2-dropdown .select2-results__option[aria-selected=true] {
+  display: none;
+}
+
 .messages-wrapper #subnav .subnav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5618,8 +5622,7 @@ button[data-bp-close]:hover {
   }
 }
 
-/*-------------------------------------*\
-	HINT.css - A CSS tooltip library
+/*-------------------------------------*	HINT.css - A CSS tooltip library
 \*-------------------------------------*/
 /**
  * HINT.css is a tooltip library made in pure CSS.
@@ -10229,7 +10232,7 @@ ul.bb-albums-list .bb-more-photos strong {
 .bb-album-list-item .bs-cover-wrap:after {
   content: " ";
   position: absolute;
-  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 60%, rgba(0, 0, 0, 0) 100%);
+  background-image: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0.01) 60%, transparent 100%);
   border-radius: 3px;
   width: 100%;
   height: 100%;
