--- a/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_messages.scss
@@ -476,7 +476,7 @@ input#send-to-input {
 .messages .select2-dropdown {
 	border-color: $med-light-grey;
 
-	.select2-results__option[aria-selected=true] {
+	.select2-results__option[aria-selected="true"] {
 		display: none;
 	}
 }
