--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -3924,7 +3924,7 @@ input#send-to-input {
   border-color: #d6d6d6;
 }
 
-.messages .select2-dropdown .select2-results__option[aria-selected=true] {
+.messages .select2-dropdown .select2-results__option[aria-selected="true"] {
   display: none;
 }
 
@@ -7124,13 +7124,6 @@ body.reply-edit .reply {
 #bbpress-forums .status-closed,
 #bbpress-forums .status-closed a {
   color: #ccc;
-}
-
-#bbpress-forums ul {
-  background: none;
-  list-style: none;
-  margin: 0;
-  padding: 0;
 }
 
 #bbpress-forums ul.bbp-threaded-replies {
