fixing grunt css issues

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1312,7 +1312,7 @@ body.post-type-bp-email .categorydiv label {
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	margin: 0 -10px 0 -10px;
+	margin: 0 -10px;
 }
 
 .bp_appboss_wrap .appboss-banner-block-item {
