--- a/src/bp-activity/css/mentions-rtl.css
+++ b/src/bp-activity/css/mentions-rtl.css
@@ -88,7 +88,7 @@
 
 	.atwho-view ul li .username {
 		display: inline-block;
-		margin: -10px 0 0 0;
+		margin: -10px 0 0;
 		padding: 10px 0;
 	}
 
