Fixed - Admin bar styles

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
@@ -536,3 +536,12 @@
 	}
 
 } // close @media
+
+// Adminbar Styles
+.admin-bar.bp-hide-adminbar {
+	margin-top: -32px;
+
+	#wpadminbar {
+		display: none;
+	}
+}
