Fixed - Admin bar styles - Mobile

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
@@ -541,11 +541,20 @@
 .admin-bar.bp-hide-adminbar {
 	margin-top: -32px;
 
+	@media screen and (max-width: 782px) {
+		margin-top: -46px;
+	}
+
 	#wpadminbar {
 		display: none;
 	}
 
-	@media screen and (max-width: 782px) {
-		margin-top: -46px;
+	.bb-mobile-panel-wrapper {
+		top: 0;
+		height: 100%;
+	}
+
+	a.bb-close-panel i {
+		top: 32px;
 	}
 }
