--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -7083,14 +7083,23 @@ button[data-bp-tooltip] {
   margin-top: -32px;
 }
 
-.admin-bar.bp-hide-adminbar #wpadminbar {
-  display: none;
-}
-
 @media screen and (max-width: 782px) {
   .admin-bar.bp-hide-adminbar {
     margin-top: -46px;
   }
+}
+
+.admin-bar.bp-hide-adminbar #wpadminbar {
+  display: none;
+}
+
+.admin-bar.bp-hide-adminbar .bb-mobile-panel-wrapper {
+  top: 0;
+  height: 100%;
+}
+
+.admin-bar.bp-hide-adminbar a.bb-close-panel i {
+  top: 32px;
 }
 
 /**
