multisite register form

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_registration.scss
@@ -59,6 +59,14 @@
 		.password-entry-confirm {
 			border: 1px solid $bp-border-color;
 		}
+
+		.blog-details {
+			margin-top: 25px;
+
+			h2 {
+				margin-bottom: 10px;
+			}
+		}
 	} // close .signup-form
 
 	.register-privacy-info {
