admin css (needs grunt)

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -348,7 +348,7 @@ tr.bp-search-parent-field label {
 }
 
 .bp-admin-card h2 {
-	line-height: 38px;
+	line-height: 1;
 	margin: 0 0 1em;
 	padding-bottom: 1.2em;
 	font-size: 22px;
