--- a/src/bp-core/css/emojionearea-edited-rtl.css
+++ b/src/bp-core/css/emojionearea-edited-rtl.css
@@ -698,8 +698,8 @@ img.emoji,
 img.emojioneemoji {
 	display: inline-block;
 	margin: 3px;
-	width: 24px;
-	height: 24px;
+	width: 24px !important;
+	height: 24px !important;
 }
 
 .emojionearea .emojionearea-picker .emojionearea-wrapper:after {
